--- a/src/main/resources/rsrc/templates/permissions.html
+++ b/src/main/resources/rsrc/templates/permissions.html
@@ -18,9 +18,21 @@ h1 {
 }
 </style>
 <body>
-	<u>
-		<h1>${cover_title}</h1>
-	</u> ${if permissions_none} ${permissions_none} ${else}
+
+	<table style="border: none">
+		<tr>
+			${if cover_icon}
+			<td><img src="${cover_icon}" width="100" height="100"></td>
+			${end}
+
+			<td valign="top"><u>
+					<h1>${cover_title}</h1>
+			</u> <strong>${cover_author}</strong><br>
+			<code>${cover_package}</code></td>
+		</tr>
+	</table>
+
+	${if permissions_none} ${permissions_none} ${else}
 	<ul>
 		${foreach permissions_list item}
 		<li>${item} ${end}
