Reworked (simplified) the entire status signalling. Basically, the man in the middle overhead is now gone and the workers can now pump more information directly to the UI. Visually, the user will now finally get a list of all files belonging to a download in the download view.

--- a/src/main/resources/rsrc/templates/download.html
+++ b/src/main/resources/rsrc/templates/download.html
@@ -22,10 +22,19 @@ h1 {
 <body>
 	<h1>${title}</h1>
 	<code>${path}</code>
+	${if files}
 	<ul>
 		${foreach files item}
-		<li><code>${item}</code> ${end}
+		<li><code>${item.name}</code> ${end}
 	</ul>
+	${end} ${if deleted_files}
+	<ul>
+		${foreach deleted_files item}
+		<li><code>
+				<strike>${item.name}</strike>
+			</code> ${end}
+	</ul>
+	${end}
 </body>
 </html>
 
