--- a/src/main/resources/rsrc/templates/download.html
+++ b/src/main/resources/rsrc/templates/download.html
@@ -20,9 +20,20 @@ h1 {
 }
 </style>
 <body>
-	<h1>${title}</h1>
-	<code>${path}</code>
-	${if files}
+	<table style="border: none">
+		<tr>
+			${if icon}
+			<td><img src="${icon}" width="100" height="100"></td> ${end}
+
+			<td valign="top"><u>
+					<h1>${title}</h1>
+			</u> ${if website} <strong><a href="${website}">${author}</a></strong>
+				${if email} <a href="mailto:${email}">&lt;${email}&gt;</a>${end}<br>
+				${else} <strong>${author}</strong><br> ${end} <code>${package}<br>${size}</code></td>
+		</tr>
+	</table>
+	<p>
+		<a href="${pathuri}"><code>${path}</code> </a> ${if files}
 	<ul>
 		${foreach files item}
 		<li><code>${item.name}</code> ${end}
