Show the current accountname on the splash screen.

--- a/src/main/resources/rsrc/templates/splash.html
+++ b/src/main/resources/rsrc/templates/splash.html
@@ -36,10 +36,12 @@ th {
 		<tr>
 			<th>${i18n_archive_folder}</th>
 			<th>${i18n_archive_appcount}</th>
+			<th>${i18n_archive_account}</th>
 		</tr>
 		<tr>
 			<td><a href="${archive_folder.path}">${archive_folder.name}</a></td>
 			<td>${archive_count}</td>
+			<td>${archive_account}</td>
 		</tr>
 	</table>
 	<p>
