--- a/src/main/resources/rsrc/templates/splash.html
+++ b/src/main/resources/rsrc/templates/splash.html
@@ -5,6 +5,10 @@ h1 {
 	text-decoration: underline;
 }
 
+h2 {
+	background-color: #9E9E9E;
+}
+
 th {
 	text-align: left;
 	background-color: #9E9E9E;
